refactor(Adapter): Sonar issue resolved